# lean-agent

./: .gitignore  README.md  docker-compose.yml  get-last-message.sh
lean-agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
lean-agent/src/lean_agent/: __main__.py  _text.py  api.py  api_deps.py  api_errors.py  api_mappers.py  api_schemas.py  cli.py  git_ops.py  llm.py  paths.py  render.py  slugify.py  state.py
lean-agent/src/lean_agent/api_routes/: _sse.py  hypotheses.py  interviews.py  (+3 more)
lean-agent/tests/: conftest.py  test_api.py  test_api_errors.py  test_api_mappers.py  test_api_schemas.py  test_cli.py  test_git_ops.py  test_integration.py  test_integration_v0_3.py  test_llm.py  test_paths.py  test_prompts_legacy.py  test_render.py  test_slugify.py  test_state.py  test_text.py
lean-agent/tests/fixtures/: fake_home.py
lean-agent/tests/test_api_routes/: test_hypotheses.py  test_interviews.py  test_panel_presets.py  test_personas_write.py  test_projects.py  test_sse.py
lean-agent/tests/test_commands/: test_edit_persona.py  test_edit_preset.py  test_errors.py  test_export_kit.py  test_init.py  test_kill.py  test_layout.py  test_list_projects.py  test_promote.py  test_read_hypothesis_detail.py  test_read_interview_content.py  test_read_research_tree.py  test_revise.py  test_run_r1.py  test_use.py
lean-agent/tests/test_panel_presets/: test_loader.py  test_writer.py
lean-agent/tests/test_personas/: test_loader.py  test_panel.py  test_writer.py
lean-agent/tests/test_prompts/: test_persona_edit.py  test_preset_edit.py  test_preset_gap_analysis.py
(+113 files in other folders)
