[project]
name = "lean-agent"
version = "0.0.1"
description = "Lean Startup Agent — Mode A (R0+R1) hypothesis pre-filter and rehearsal coach"
requires-python = ">=3.12"
dependencies = [
    # Use UPPER-BOUNDED ranges per docs/lean-startup-agent/library-notes.md (cross-cutting note).
    # Replace each entry with the exact latest from library-notes.md.
    "typer>=0.25,<0.26",
    "anthropic>=0.97,<0.98",
    "jinja2>=3.1,<3.2",
    "gitpython>=3.1,<3.2",
    "fastapi>=0.136,<0.137",
    "uvicorn[standard]>=0.32,<0.33",
    # NOTE: pydantic-settings deferred to v0.2 (v0 has no config file).
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-mock>=3.15,<3.16",
    "ruff>=0.15,<0.16",
    "mypy>=1.10,<2.0",
]

[project.scripts]
lean = "lean_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lean_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/lean_agent/templates" = "lean_agent/templates"
"src/lean_agent/personas/starter" = "lean_agent/personas/starter"
"src/lean_agent/personas/_template_persona.md" = "lean_agent/personas/_template_persona.md"
"src/lean_agent/personas/_template_preset.md" = "lean_agent/personas/_template_preset.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Default rule set is fine for v0; tighten later as needed.
